Fixed alignment issues and styled the footer.

--- a/styles3.css
+++ b/styles3.css
@@ -5,9 +5,10 @@
     box-sizing: border-box;
 }
 
-img:hover {
+.pic:hover {
     transform: scale(1.1);
 }
+
 
 
 .background {
@@ -56,15 +57,10 @@ h1 {
     margin-left: 15px;
 }
 
-.mainContainer {
-    display: flex;
-    flex-direction: column;
-}
 
 .navbar {
     display: flex;
     justify-content: center;
-    background-color: #d1cfc8;
 }
 
 /* Body */
@@ -80,6 +76,13 @@ h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.box {
+    padding: 20px;
+    
+    
 }
 
 .box .products {
@@ -99,6 +102,10 @@ h1 {
     color: black;
     align-items: center;
     justify-content: center;
+    font-size: 18px;
+    font-weight: bolder;
+    cursor: pointer;
+
 }
 
 .intro {
@@ -118,4 +125,15 @@ h1 {
     font-weight: bolder;
     font-size: 20px;
     text-decoration: underline;
+}
+
+/* Footer */
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    margin-top: 50px;
+    font-size: 10px;
 }
